--- a/sisweb/mygames/templates/base.html
+++ b/sisweb/mygames/templates/base.html
@@ -1,8 +1,9 @@
-{% load static files %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--<link rel="stylesheet" href="{% static "style/base.css" %}" />-->
+ <link rel = "stylesheet"
+   type = "text/css"
+   href = "css/base.css" />
     <title>{% block title %}MyRestaurants by MyRecommentdations.org{% endblock %}</title>
 </head>
 <body>
