--- a/sisweb/mygames/templates/game_list.html
+++ b/sisweb/mygames/templates/game_list.html
@@ -2,12 +2,12 @@
 {% block content %}  
 <h1>  
     Games
-    {% if user %}(<a href="">add</a>){% endif %}
+    <!--{% if user %}(<a href="">add</a>){% endif %}-->
 </h1>  
 <ul>  
     {% for game in latest_game_list %}
-        <li><a href="{% url 'mygames:game_detail' game.id %}">
-            {{ game.name }}</a></li>
+        <li><a href="{% url 'mygames:game_detail' game.game_id %}">
+            {{ game.game_name }}</a></li>
     {% empty %}<li>Sorry, no games registered yet.</li>
     {% endfor %}
 </ul>  
