Fixed error in region_list

--- a/sisweb/mygames/templates/region_list.html
+++ b/sisweb/mygames/templates/region_list.html
@@ -5,7 +5,7 @@
 </h2>
 <ul>
     {% for region in region_list %}
-        <li><a href="{% url 'mygames:region_detail' region.region_id %}">
+        <li><a href="{% url 'mygames:region_detail' region.id %}">
             {{ region.region_name }}</a></li>
     {% empty %}<li>Sorry, no regions registered yet.</li>
     {% endfor %}
