--- a/sisweb/mygames/templates/game_detail.html
+++ b/sisweb/mygames/templates/game_detail.html
@@ -18,6 +18,8 @@
     <li>
         {{ score.date }} score: {{ score.rating }}
     </li>
+
+
     {% empty %}
     <li>
         No ratings for this game yet, please Rate this game.
@@ -25,6 +27,9 @@
     {% endfor %}
 </ul>
 </p>
+
+<h3>SCORE: {{AVG_RATING}}<br/> </h3>
+
 <h3>Rate this game</h3>
 <form action="{% url 'mygames:rating_create' game.id %}" method="post">
     {% csrf_token %}
