added delete option to gamescore so now user can create/update/delete his own game ratings

--- a/sisweb/mygames/templates/game_detail.html
+++ b/sisweb/mygames/templates/game_detail.html
@@ -17,8 +17,12 @@
     {% for score in G_SCORE %}
     <li>
         {{ score.date }} score: {{ score.rating }}
+        {% if user == score.user %}
+        <button>
+            <a href="{% url 'mygames:rating_delete' score.id %}"> Delete </a>
+        </button>
+        {% endif %}
     </li>
-
 
     {% empty %}
     <li>
