--- a/sisweb/mygames/templates/base.html
+++ b/sisweb/mygames/templates/base.html
@@ -48,7 +48,7 @@
     {% block header %}
     <div id="nav">
         {% if user.is_authenticated %}
-        welcome {{ user.username }} |
+        welcome <b> {{ user.username }} </b>
         (<a href="{% url 'logout' %}?next=/">logout</a>)
         {% else %}
         <a href="/">home</a>
@@ -59,7 +59,9 @@
     <p>
         {% if user.is_authenticated %}
         <a href="/mygames/">games</a>
+
         <a href="/mygames/platforms">platforms</a>
+
         <a href="/mygames/regions">regions</a>
         {% endif %}
     </p>
