--- a/sisweb/mygames/templates/game_detail.html
+++ b/sisweb/mygames/templates/game_detail.html
@@ -1,46 +1,67 @@
 {% extends "base.html" %}
+{% block title %}MyGames - {{ game.game_name }}{% endblock %}
 {% block content %}
-<h2>
-    {{ game.game_name }}
-</h2>
-<p>
-    genre: {{ game.genre }} <br/>
-</p>
-<p>
-    developer: {{ game.developer }} <br/>
-</p>
-<p>
-    publisher: {{ game.publisher }} <br/>
-</p>
-<p> ratings:
-<ul>
+
+<span vocab="http://schema.org/" typeof="Game">
+
+<h1>
+    <span property="name">{{ game.game_name }}</span>
+</h1>
+
+<h2>Genre</h2>
+    <p>
+        {{ game.genre }} <br/>
+    </p>
+
+<h2>Developer</h2>
+    <p>
+        {{ game.developer }} <br/>
+    </p>
+
+<h2>Publisher</h2>
+    <p>
+        {{ game.publisher }} <br/>
+    </p>
+
+<h2>Reviews:</h2>
+<span  rel="aggregateRating">
+    <p typeof="AggregateRating">
+        Average Rating: <span property="ratingValue">{{AVG_RATING.rating__avg}}</span><br/>
+        Count: <span property="reviewCount">{{ COUNT_RATING }}</span>
+    </p>
+</span>
+
+<ul rel="review">
     {% for score in G_SCORE %}
-    <li>
-        {{ score.date }} score: {{ score.rating }}
-        {% if user == score.user %}
-        <button>
-            <a href="{% url 'mygames:rating_delete' score.id %}"> Delete </a>
-        </button>
-        {% endif %}
-    </li>
-
-    {% empty %}
-    <li>
-        No ratings for this game yet, please Rate this game.
-    </li>
+    <li typeof="Review">
+        <p>Date: <span property="datePublished">{{ score.date}}</span></p>
+        <p rel="reviewRating" typeof="Rating">
+            - Score: <span property="ratingValue">{{ score.rating }}</span> star{{ score.rating|pluralize }}
+            {% if user == score.user %}
+                <button>
+                    <a href="{% url 'mygames:rating_delete' score.id %}"> Delete </a>
+                </button>
+            {% endif %}
+        <p>Created by <span property="author">{{ score.user }}</span></p>
+        {% empty %}
+        <p>
+            No ratings for this game yet, please Rate this game.
+        </p>
     {% endfor %}
+        </p>
+    </li>
 </ul>
-</p>
 
-<h3>SCORE: {{AVG_RATING.rating__avg}}<br/> </h3>
+</span>
 
-<h3>Rate this game</h3>
+<h3>Add Reviews</h3>
 <form action="{% url 'mygames:rating_create' game.id %}" method="post">
     {% csrf_token %}
-    <p>{% for rate in RATING_CHOICES %}
-        <input type="radio" name="rating" id="rating{{ forloop.counter }}" value="{{ rate.0 }}"/>
-        <label for="choice{{ forloop.counter }}">{{ rate.0 }} /5 </label>
-        <br/>{% endfor %}
+    <p>
+        {% for rate in RATING_CHOICES %}
+            <input type="radio" name="rating" id="rating{{ forloop.counter }}" value="{{ rate.0 }}"/>
+            <label for="choice{{ forloop.counter }}">{{ rate.0 }} /5 </label><br/>
+        {% endfor %}
     </p>
     <input type="submit" value="Rate"/>
 </form>
