Add Schema.org Semantic Markup to game detail template and a score counter in views

--- a/sisweb/mygames/templates/game_detail.html
+++ b/sisweb/mygames/templates/game_detail.html
@@ -10,17 +10,17 @@
 
 <h2>Genre</h2>
     <p>
-        {{ game.genre }} <br/>
+        <span property="genre">{{ game.genre }}</span>
     </p>
 
 <h2>Developer</h2>
     <p>
-        {{ game.developer }} <br/>
+        <span property="creator">{{ game.developer }}</span>
     </p>
 
 <h2>Publisher</h2>
     <p>
-        {{ game.publisher }} <br/>
+        <span property="publisher">{{ game.publisher }}</span>
     </p>
 
 <h2>Reviews:</h2>
